Changelog

$Id: Changes,v 1.9 2003-09-19 15:16:30 oops Exp $

* Fri, Sep 19 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed blank return fileread function
	- move to libfile.h from libstring.h on fileread function
	- added writefile function
	- removed strip option on Makefile
	- fixed gabage problem on lib_preg_parse function

* Thu, Sep 18 2003
	by JoungKyun Kim <http://www.oops.org>
	- changed exit to return when not racecode domain on _race.c
	- added CVS id

* Sun, Sep 14 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed group expression bug on lib_preg_match function
	- modified Makefile
	- fixed typo man page

* Tue, Sep 09 2003
	by JoungKyun Kim <http://www.oops.org>
	- added internal pcre library
	- added internal idn library
	- fixed typo
	- release 0.0.2

* Mon, Sep 08 2003
	by JoungKyun Kim <http://www.oops.org>
	- relase 0.0.1
